# fitpack

./: CMakeLists.txt
install/: fitpackConfig.cmake.in  template.pc
src/: CMakeLists.txt
test/: CMakeLists.txt
